setup inicial del proyecto

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </script>
     <script src="https://unpkg.com/scrollreveal"></script>
     
-    <title>useReducer Practice</title>
+    <title>Heroes App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
